--- a/RL_As_Supervised.ipynb
+++ b/RL_As_Supervised.ipynb
@@ -6,11 +6,7 @@
    "source": [
     "# RL as Classification\n",
     "\n",
-    "In this assignment we explore different approaches to using classification in Reinforcement Learning algorithms.  \n",
-    "\n",
-    "The idea of using classification \n",
-    "\n",
-    "\n"
+    "In this assignment we explore the idea of using classification in Reinforcement Learning algorithms.  \n"
    ]
   },
   {
@@ -33,29 +29,14 @@
     "This approach brings three main advantages, as written in [4]:\n",
     " - Often, policies are simpler to represent and learn than value functions\n",
     " - A rough estimate of the value function often is sufficient to separate the best action from the rest.\n",
-    " - Even if the best action estimates are noisy (due to the value function approximation), the generalization afforded by classification methods usually smooths out the noise"
+    " - Even if the best action estimates are noisy (due to the value function approximation), the generalization afforded by classification methods usually smooths out the noise\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "Recall the policy iteration algorithm, as shown below [3]:\n",
-    "![alt text](images/policy_iteration.png)\n",
-    "\n"
+    "We provide an implementation of approximate policy iteration using a simple 2 layers fully connected network on the cartpole task."
    ]
   },
   {
@@ -70,15 +51,6 @@
     "\n",
     "[4] Classification-based Approximate Policy Iteration: Experiments and Extended Discussions, 2014, Farahmand, Precup, Barreto, Ghavamzadeh"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
